PracticaExamen/parser.output
Terminals unused in grammar

   TK_ERROR


Grammar

    0 $accept: start $end

    1 start: statementList

    2 statementList: statementList statement
    3              | statement

    4 statement: print_statement TK_COMMA
    5          | assign_statement TK_COMMA

    6 assign_statement: TK_ID TK_EQ expression

    7 print_statement: TK_PRINT TK_PAR_LEFT argumentList TK_PAR_RIGHT

    8 argumentList: argumentList TK_COMMA argument
    9             | argument

   10 argument: expression
   11         | TK_STRING
   12         | TK_CHAR

   13 expression: aritmethic

   14 aritmethic: aritmethic TK_ADD term
   15           | aritmethic TK_SUB term
   16           | term

   17 term: term TK_MULT exponent
   18     | term TK_DIV exponent
   19     | term TK_MOD exponent
   20     | exponent

   21 exponent: exponent TK_EXP factor
   22         | factor

   23 factor: TK_NUM
   24       | TK_ID
   25       | TK_PAR_LEFT expression TK_PAR_RIGHT


Terminals, with rules where they appear

$end (0) 0
error (256)
TK_ADD (258) 14
TK_SUB (259) 15
TK_MULT (260) 17
TK_DIV (261) 18
TK_MOD (262) 19
TK_EXP (263) 21
TK_NUM (264) 23
TK_ID (265) 6 24
TK_STRING (266) 11
TK_CHAR (267) 12
TK_PRINT (268) 7
TK_PAR_LEFT (269) 7 25
TK_PAR_RIGHT (270) 7 25
TK_ERROR (271)
TK_COMMA (272) 4 5 8
TK_EQ (273) 6


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
start (20)
    on left: 1, on right: 0
statementList (21)
    on left: 2 3, on right: 1 2
statement (22)
    on left: 4 5, on right: 2 3
assign_statement (23)
    on left: 6, on right: 5
print_statement (24)
    on left: 7, on right: 4
argumentList (25)
    on left: 8 9, on right: 7 8
argument (26)
    on left: 10 11 12, on right: 8 9
expression (27)
    on left: 13, on right: 6 10 25
aritmethic (28)
    on left: 14 15 16, on right: 13 14 15
term (29)
    on left: 17 18 19 20, on right: 14 15 16 17 18 19
exponent (30)
    on left: 21 22, on right: 17 18 19 20 21
factor (31)
    on left: 23 24 25, on right: 21 22


State 0

    0 $accept: . start $end
    1 start: . statementList
    2 statementList: . statementList statement
    3              | . statement
    4 statement: . print_statement TK_COMMA
    5          | . assign_statement TK_COMMA
    6 assign_statement: . TK_ID TK_EQ expression
    7 print_statement: . TK_PRINT TK_PAR_LEFT argumentList TK_PAR_RIGHT

    TK_ID     shift, and go to state 1
    TK_PRINT  shift, and go to state 2

    start             go to state 3
    statementList     go to state 4
    statement         go to state 5
    assign_statement  go to state 6
    print_statement   go to state 7


State 1

    6 assign_statement: TK_ID . TK_EQ expression

    TK_EQ  shift, and go to state 8


State 2

    7 print_statement: TK_PRINT . TK_PAR_LEFT argumentList TK_PAR_RIGHT

    TK_PAR_LEFT  shift, and go to state 9


State 3

    0 $accept: start . $end

    $end  shift, and go to state 10


State 4

    1 start: statementList .  [$end]
    2 statementList: statementList . statement
    4 statement: . print_statement TK_COMMA
    5          | . assign_statement TK_COMMA
    6 assign_statement: . TK_ID TK_EQ expression
    7 print_statement: . TK_PRINT TK_PAR_LEFT argumentList TK_PAR_RIGHT

    TK_ID     shift, and go to state 1
    TK_PRINT  shift, and go to state 2

    $default  reduce using rule 1 (start)

    statement         go to state 11
    assign_statement  go to state 6
    print_statement   go to state 7


State 5

    3 statementList: statement .

    $default  reduce using rule 3 (statementList)


State 6

    5 statement: assign_statement . TK_COMMA

    TK_COMMA  shift, and go to state 12


State 7

    4 statement: print_statement . TK_COMMA

    TK_COMMA  shift, and go to state 13


State 8

    6 assign_statement: TK_ID TK_EQ . expression
   13 expression: . aritmethic
   14 aritmethic: . aritmethic TK_ADD term
   15           | . aritmethic TK_SUB term
   16           | . term
   17 term: . term TK_MULT exponent
   18     | . term TK_DIV exponent
   19     | . term TK_MOD exponent
   20     | . exponent
   21 exponent: . exponent TK_EXP factor
   22         | . factor
   23 factor: . TK_NUM
   24       | . TK_ID
   25       | . TK_PAR_LEFT expression TK_PAR_RIGHT

    TK_NUM       shift, and go to state 14
    TK_ID        shift, and go to state 15
    TK_PAR_LEFT  shift, and go to state 16

    expression  go to state 17
    aritmethic  go to state 18
    term        go to state 19
    exponent    go to state 20
    factor      go to state 21


State 9

    7 print_statement: TK_PRINT TK_PAR_LEFT . argumentList TK_PAR_RIGHT
    8 argumentList: . argumentList TK_COMMA argument
    9             | . argument
   10 argument: . expression
   11         | . TK_STRING
   12         | . TK_CHAR
   13 expression: . aritmethic
   14 aritmethic: . aritmethic TK_ADD term
   15           | . aritmethic TK_SUB term
   16           | . term
   17 term: . term TK_MULT exponent
   18     | . term TK_DIV exponent
   19     | . term TK_MOD exponent
   20     | . exponent
   21 exponent: . exponent TK_EXP factor
   22         | . factor
   23 factor: . TK_NUM
   24       | . TK_ID
   25       | . TK_PAR_LEFT expression TK_PAR_RIGHT

    TK_NUM       shift, and go to state 14
    TK_ID        shift, and go to state 15
    TK_STRING    shift, and go to state 22
    TK_CHAR      shift, and go to state 23
    TK_PAR_LEFT  shift, and go to state 16

    argumentList  go to state 24
    argument      go to state 25
    expression    go to state 26
    aritmethic    go to state 18
    term          go to state 19
    exponent      go to state 20
    factor        go to state 21


State 10

    0 $accept: start $end .

    $default  accept


State 11

    2 statementList: statementList statement .

    $default  reduce using rule 2 (statementList)


State 12

    5 statement: assign_statement TK_COMMA .

    $default  reduce using rule 5 (statement)


State 13

    4 statement: print_statement TK_COMMA .

    $default  reduce using rule 4 (statement)


State 14

   23 factor: TK_NUM .

    $default  reduce using rule 23 (factor)


State 15

   24 factor: TK_ID .

    $default  reduce using rule 24 (factor)


State 16

   13 expression: . aritmethic
   14 aritmethic: . aritmethic TK_ADD term
   15           | . aritmethic TK_SUB term
   16           | . term
   17 term: . term TK_MULT exponent
   18     | . term TK_DIV exponent
   19     | . term TK_MOD exponent
   20     | . exponent
   21 exponent: . exponent TK_EXP factor
   22         | . factor
   23 factor: . TK_NUM
   24       | . TK_ID
   25       | . TK_PAR_LEFT expression TK_PAR_RIGHT
   25       | TK_PAR_LEFT . expression TK_PAR_RIGHT

    TK_NUM       shift, and go to state 14
    TK_ID        shift, and go to state 15
    TK_PAR_LEFT  shift, and go to state 16

    expression  go to state 27
    aritmethic  go to state 18
    term        go to state 19
    exponent    go to state 20
    factor      go to state 21


State 17

    6 assign_statement: TK_ID TK_EQ expression .

    $default  reduce using rule 6 (assign_statement)


State 18

   13 expression: aritmethic .  [TK_PAR_RIGHT, TK_COMMA]
   14 aritmethic: aritmethic . TK_ADD term
   15           | aritmethic . TK_SUB term

    TK_ADD  shift, and go to state 28
    TK_SUB  shift, and go to state 29

    $default  reduce using rule 13 (expression)


State 19

   16 aritmethic: term .  [TK_ADD, TK_SUB, TK_PAR_RIGHT, TK_COMMA]
   17 term: term . TK_MULT exponent
   18     | term . TK_DIV exponent
   19     | term . TK_MOD exponent

    TK_MULT  shift, and go to state 30
    TK_DIV   shift, and go to state 31
    TK_MOD   shift, and go to state 32

    $default  reduce using rule 16 (aritmethic)


State 20

   20 term: exponent .  [TK_ADD, TK_SUB, TK_MULT, TK_DIV, TK_MOD, TK_PAR_RIGHT, TK_COMMA]
   21 exponent: exponent . TK_EXP factor

    TK_EXP  shift, and go to state 33

    $default  reduce using rule 20 (term)


State 21

   22 exponent: factor .

    $default  reduce using rule 22 (exponent)


State 22

   11 argument: TK_STRING .

    $default  reduce using rule 11 (argument)


State 23

   12 argument: TK_CHAR .

    $default  reduce using rule 12 (argument)


State 24

    7 print_statement: TK_PRINT TK_PAR_LEFT argumentList . TK_PAR_RIGHT
    8 argumentList: argumentList . TK_COMMA argument

    TK_PAR_RIGHT  shift, and go to state 34
    TK_COMMA      shift, and go to state 35


State 25

    9 argumentList: argument .

    $default  reduce using rule 9 (argumentList)


State 26

   10 argument: expression .

    $default  reduce using rule 10 (argument)


State 27

   25 factor: TK_PAR_LEFT expression . TK_PAR_RIGHT

    TK_PAR_RIGHT  shift, and go to state 36


State 28

   14 aritmethic: aritmethic TK_ADD . term
   17 term: . term TK_MULT exponent
   18     | . term TK_DIV exponent
   19     | . term TK_MOD exponent
   20     | . exponent
   21 exponent: . exponent TK_EXP factor
   22         | . factor
   23 factor: . TK_NUM
   24       | . TK_ID
   25       | . TK_PAR_LEFT expression TK_PAR_RIGHT

    TK_NUM       shift, and go to state 14
    TK_ID        shift, and go to state 15
    TK_PAR_LEFT  shift, and go to state 16

    term      go to state 37
    exponent  go to state 20
    factor    go to state 21


State 29

   15 aritmethic: aritmethic TK_SUB . term
   17 term: . term TK_MULT exponent
   18     | . term TK_DIV exponent
   19     | . term TK_MOD exponent
   20     | . exponent
   21 exponent: . exponent TK_EXP factor
   22         | . factor
   23 factor: . TK_NUM
   24       | . TK_ID
   25       | . TK_PAR_LEFT expression TK_PAR_RIGHT

    TK_NUM       shift, and go to state 14
    TK_ID        shift, and go to state 15
    TK_PAR_LEFT  shift, and go to state 16

    term      go to state 38
    exponent  go to state 20
    factor    go to state 21


State 30

   17 term: term TK_MULT . exponent
   21 exponent: . exponent TK_EXP factor
   22         | . factor
   23 factor: . TK_NUM
   24       | . TK_ID
   25       | . TK_PAR_LEFT expression TK_PAR_RIGHT

    TK_NUM       shift, and go to state 14
    TK_ID        shift, and go to state 15
    TK_PAR_LEFT  shift, and go to state 16

    exponent  go to state 39
    factor    go to state 21


State 31

   18 term: term TK_DIV . exponent
   21 exponent: . exponent TK_EXP factor
   22         | . factor
   23 factor: . TK_NUM
   24       | . TK_ID
   25       | . TK_PAR_LEFT expression TK_PAR_RIGHT

    TK_NUM       shift, and go to state 14
    TK_ID        shift, and go to state 15
    TK_PAR_LEFT  shift, and go to state 16

    exponent  go to state 40
    factor    go to state 21


State 32

   19 term: term TK_MOD . exponent
   21 exponent: . exponent TK_EXP factor
   22         | . factor
   23 factor: . TK_NUM
   24       | . TK_ID
   25       | . TK_PAR_LEFT expression TK_PAR_RIGHT

    TK_NUM       shift, and go to state 14
    TK_ID        shift, and go to state 15
    TK_PAR_LEFT  shift, and go to state 16

    exponent  go to state 41
    factor    go to state 21


State 33

   21 exponent: exponent TK_EXP . factor
   23 factor: . TK_NUM
   24       | . TK_ID
   25       | . TK_PAR_LEFT expression TK_PAR_RIGHT

    TK_NUM       shift, and go to state 14
    TK_ID        shift, and go to state 15
    TK_PAR_LEFT  shift, and go to state 16

    factor  go to state 42


State 34

    7 print_statement: TK_PRINT TK_PAR_LEFT argumentList TK_PAR_RIGHT .

    $default  reduce using rule 7 (print_statement)


State 35

    8 argumentList: argumentList TK_COMMA . argument
   10 argument: . expression
   11         | . TK_STRING
   12         | . TK_CHAR
   13 expression: . aritmethic
   14 aritmethic: . aritmethic TK_ADD term
   15           | . aritmethic TK_SUB term
   16           | . term
   17 term: . term TK_MULT exponent
   18     | . term TK_DIV exponent
   19     | . term TK_MOD exponent
   20     | . exponent
   21 exponent: . exponent TK_EXP factor
   22         | . factor
   23 factor: . TK_NUM
   24       | . TK_ID
   25       | . TK_PAR_LEFT expression TK_PAR_RIGHT

    TK_NUM       shift, and go to state 14
    TK_ID        shift, and go to state 15
    TK_STRING    shift, and go to state 22
    TK_CHAR      shift, and go to state 23
    TK_PAR_LEFT  shift, and go to state 16

    argument    go to state 43
    expression  go to state 26
    aritmethic  go to state 18
    term        go to state 19
    exponent    go to state 20
    factor      go to state 21


State 36

   25 factor: TK_PAR_LEFT expression TK_PAR_RIGHT .

    $default  reduce using rule 25 (factor)


State 37

   14 aritmethic: aritmethic TK_ADD term .  [TK_ADD, TK_SUB, TK_PAR_RIGHT, TK_COMMA]
   17 term: term . TK_MULT exponent
   18     | term . TK_DIV exponent
   19     | term . TK_MOD exponent

    TK_MULT  shift, and go to state 30
    TK_DIV   shift, and go to state 31
    TK_MOD   shift, and go to state 32

    $default  reduce using rule 14 (aritmethic)


State 38

   15 aritmethic: aritmethic TK_SUB term .  [TK_ADD, TK_SUB, TK_PAR_RIGHT, TK_COMMA]
   17 term: term . TK_MULT exponent
   18     | term . TK_DIV exponent
   19     | term . TK_MOD exponent

    TK_MULT  shift, and go to state 30
    TK_DIV   shift, and go to state 31
    TK_MOD   shift, and go to state 32

    $default  reduce using rule 15 (aritmethic)


State 39

   17 term: term TK_MULT exponent .  [TK_ADD, TK_SUB, TK_MULT, TK_DIV, TK_MOD, TK_PAR_RIGHT, TK_COMMA]
   21 exponent: exponent . TK_EXP factor

    TK_EXP  shift, and go to state 33

    $default  reduce using rule 17 (term)


State 40

   18 term: term TK_DIV exponent .  [TK_ADD, TK_SUB, TK_MULT, TK_DIV, TK_MOD, TK_PAR_RIGHT, TK_COMMA]
   21 exponent: exponent . TK_EXP factor

    TK_EXP  shift, and go to state 33

    $default  reduce using rule 18 (term)


State 41

   19 term: term TK_MOD exponent .  [TK_ADD, TK_SUB, TK_MULT, TK_DIV, TK_MOD, TK_PAR_RIGHT, TK_COMMA]
   21 exponent: exponent . TK_EXP factor

    TK_EXP  shift, and go to state 33

    $default  reduce using rule 19 (term)


State 42

   21 exponent: exponent TK_EXP factor .

    $default  reduce using rule 21 (exponent)


State 43

    8 argumentList: argumentList TK_COMMA argument .

    $default  reduce using rule 8 (argumentList)
